Fixed navbar on smaller screens, and started adding logic to add snippets

--- a/src/styling/main.css
+++ b/src/styling/main.css
@@ -14,3 +14,14 @@ body {
     -ms-filter: blur(7.5px);
     filter: blur(7.5px);
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.navbar-labels::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .navbar-labels {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
